Changed embedded domain specific language to eDSL.

--- a/proto1.tex
+++ b/proto1.tex
@@ -11,7 +11,7 @@
 
 \section{About this chapter}
 
-This chapter demonstrates a fairly generic procedure of creating an open embedded domain specific language in
+This chapter demonstrates a fairly generic procedure of creating an open eDSL in
 \progLang{Haskell} along with \textit{monadic unification}.
 As a proof of concept, the implementation consists of creating a \progLang{Prolog}-like open language whose
 unification procedure is carried out in a monad.
