Defined REPL in Related Works.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -86,7 +86,7 @@ Here is a discussion of problems mentioned above that this thesis tackles.
 
 \item the implementation is more complete.
 
-\item The implementation is not REPL based. You can write a program file and compile and run it like a normal \progLang{Haskell} file.
+\item The implementation is not  Read-Eval-Print Loop (REPL) based. You can write a program file and compile and run it like a normal \progLang{Haskell} file.
 \end{enumerate}
 
 \section{Summary}
