Changed Read-Eval-Print Loop (REPL) to REPL in Prototype 1 since it is defined in Related Works.

--- a/proto1.tex
+++ b/proto1.tex
@@ -58,7 +58,7 @@ The ones relevant to this thesis are:
 
 \item the unifier;
 
-\item the Read-Eval-Print Loop (REPL);
+\item the REPL;
 
 \item the interpreter which consists of a parsing mechanism and resembles the query resolver.
 \end{enumerate}
