Changed domain specific languages to DSLs.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -19,7 +19,7 @@ logic programming functionality as natively as possible in the host language.
 During this process we have also thrown light on the subject of eDSLs in \progLang{Haskell} and the support for the same. Moreover, we
 have provided a methodology for replicating results achieved in this thesis.
 
-\progLang{Haskell} has been shown to be an effective tool for embedding domain specific languages.
+\progLang{Haskell} has been shown to be an effective tool for embedding DSLs.
 
 
 \ifMain
