--- a/proto1.tex
+++ b/proto1.tex
@@ -257,6 +257,7 @@ Consider the scenario where the language needs to accommodate additional type of
   For instance, using \haskellConstruct{Extended} from Listing~\ref{tab:garfunkle} we have 
   \haskellConstruct{Extended} \haskellConstruct{FlatTerm} that is isomorphic to the type defined in
   Listing~\ref{tab:man-enhan-gram}.
+%% there was a fix above, still not sure about it.  dgc
 \begin{comment}
   Consider the following example,
 
