--- a/bibliography.bib
+++ b/bibliography.bib
@@ -597,13 +597,15 @@ note={\url{http://www.cs.unm.edu/~luger/ai-final2/LISP/}}
   editor    = {Steve Dunne and
                Bill Stoddart},
   title     = {Unifying Theories of Programming, First International Symposium,
-               UTP 2006, Walworth Castle, County Durham, UK, February 5-7,
+               UTP 2006, February 5-7,
                2006, Revised Selected Papers},
-  booktitle = {UTP},
+  booktitle = {Unifying Theories of Programming},
   publisher = {Springer},
   series    = {Lecture Notes in Computer Science},
   volume    = {4010},
+  month     = {February},
   year      = {2006},
+  address =   {Walworth Castle, County Durham, UK},
   isbn      = {3-540-34750-X},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
