Changed section title and opening statement for section 10.2 in Prototype 1.

--- a/proto1.tex
+++ b/proto1.tex
@@ -17,9 +17,8 @@ As a proof of concept, the implementation consists of creating a \progLang{Prolo
 unification procedure is carried out in a monad.
 
 
-\section{Ideas}
-There are four main ideas in this chapter that we work with to develop a working implementation of embedded
-\progLang{Prolog} using the concepts mentioned above.
+\section{Ingredients}
+In this chapter we work with four pieces of software to develop a working implementation of embedded \progLang{Prolog}. These are:
 
 \begin{enumerate}
 \item \progLang{Prolog}
