Changed section 6.4 title to Literature.

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -74,7 +74,7 @@ Michael Hanus \cite{website:mhanus} and Sergio Antoy \cite{website:santoy}.
 %\end{description}
 
 
-\section{Literature and publications}
+\section{Literature}
 %\begin{description}
 \subsection{Multi paradigm languages}
 Possibly one of the most important works towards bringing programming styles together is the book
