--- a/embedding.tex
+++ b/embedding.tex
@@ -46,7 +46,7 @@ It comes with three engines for query resolution, but still lacks practical \pro
 This seems to be a common problem with the other implementations, \cite{website:takashi-workplace}.
 Other informal discussions of \progLang{Prolog} have already been mentioned in Chapter~\ref{chap:introduction}.
 
-\section{Books related to implementing logic programming}
+\section{Literature related to implementing logic programming}
 
 Some books related to implementing logic programming are
 \cite{friedman05reasoned,website:logicprogexamplehaskell,krishnamurthi2007programming}.
@@ -56,8 +56,6 @@ Moreover, \cite{website:logicprogexamplehaskell} claims that \progLang{Haskell} 
 programming using the \haskellConstruct{List Monad}.
 \cite{krishnamurthi2007programming} provides a general outlook towards embedding \progLang{Prolog} in other
 languages.
-
-\section{Papers related to embedding programming languges}
 
 Abundant literature can be found on embedding detailed parts of \progLang{Prolog} features such as basic
 constructs, search strategies and data types.
