Edited content in section 14.1 and removed header.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -10,9 +10,7 @@
 %----------------------------------------------------------------------------
 \chapter{Future Scope}\label{chap:futureScope}
 
-
-\section{About this chapter}
-This chapter discusses additions that could be made on the contributions of this thesis.
+This chapter discusses additions that could be made to the contributions of this thesis.
 
 
 \section{\progLang{Prolog} quasiquoter with antiquotation}
