Changed chapter 3 name to Related Work.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Related Works}\label{chap:proposedWork}
+\chapter{Related Work}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
 This chapter discusses the current implementations and publications for embedding \progLang{Prolog} in languages
