Changed statement before list in section 3.2.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -78,7 +78,7 @@ language that takes advantages of neither paradigms.
 Mostly, the trend is towards the former.
 
 
-Here is a list of problems mentioned in the sections above that this thesis tackles:
+From the problems mentioned in the sections above, here is a list that this thesis tackles:
 \begin{enumerate}
 \item The \languageConstruct{eDSL} supports \prologConstruct{fails} and \prologConstruct{cuts}.
 
