--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -26,7 +26,7 @@ discussed below, along with their shortcomings.
   \progLang{Haskell} called \progLang{Haskell 98} \texttt{\bfseries{hugs}}.
   It is more of a proof of concept providing a mechanism to include variable search strategies in order to produce
   a result.
-  Another implementation \cite{website:takashi-workplace}, simplifies the notation of \progLang{Prolog} literals to a list format.
+  Another implementation, \cite{website:takashi-workplace}, simplifies the notation of \progLang{Prolog} literals to a list format.
   Nonetheless, both implementations lack simplicity and support for basic \progLang{Prolog} features such as
   \prologConstruct{cuts},
   \prologConstruct{fails},
