Changed section title to Some functional logic programming languages.

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -137,7 +137,7 @@ As mentioned before, one of the most popular (see \cite{website:langpop}) and wi
 industry is the \progLang{Scala} \cite{website:scala} programming language.
 
 
-\section{Functional logic programming languages}
+\section{Some functional logic programming languages}
 
 Knowing the amount of literature  on these type of languages, it is fairly easy to say that there have been numerous 
 attempts at specification and implementation.
