tiny spacing changes.

--- a/proto2.tex
+++ b/proto2.tex
@@ -278,8 +278,8 @@ in a \languageConstruct{unifier}. The type signature of \haskellConstruct{unify}
 
 
 We also return a union of the variable dictionaries for each of the terms required to convert the result into the eDSL.
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification} the procedure for 
-\haskellConstruct{monadicUnification}.
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification} the procedure for \linebreak[4]
+\haskellConstruct{monadicUnification}.\sloppy
 
 
 \begin{code-list}[H]
