--- a/proto3.tex
+++ b/proto3.tex
@@ -179,7 +179,7 @@ A \haskellConstruct{Clause} consists of a head of type \haskellConstruct{Term} a
 \end{code-list}
 
 \subsection{Language modification}
-Listing~\ref{tab:miniprlglangmod} describes the necessary modifications required to adapt the language for monadic
+Listing~\ref{tab:miniprlglangmod} describes the necessary modifications required to adapt the language for mo\-na\-dic
 unification.
 This procedure consists of opening the language and adding the necessary instances for \codeLibrary{unification-fd}
 \cite{unification-fd-lib} compatibility.
