Changed ref name.

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -164,7 +164,7 @@
    castorc++,
    chin2003type,
    csp-lib,
-   cspm-To-prolog-graph-lib,
+   cspm-To-Prolog-lib,
    gnuprolog,
    hudak1996building,
    lang2001embedding,
