--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,9 +12,8 @@
   title={A type-safe embedding of Constraint Handling Rules into Haskell},
   author={Chin, Wei-Ngan and Sulzmann, Martin and Wang, Meng},
   journal={Technical reportSchool of Computing, National University of Singapore, Boston, MA, USA},
-  year={2003},
-  publisher={Citeseer}
-}
+  pages=30,
+  year={2003}}
 @inproceedings{hinze1998prological,
   title={Prological Features in a Functional Setting Axioms and Implementation.},
   author={Hinze, Ralf and others},
@@ -1052,6 +1051,7 @@ url = {http://en.wikipedia.org/wiki/Untyped_lambda_calculus}
   title={A tutorial introduction to the lambda calculus},
   author={Rojas, Ra{\'u}l},
   journal={DOI= http://www. utdallas. edu/\~{} gupta/courses/apl/lambda. pdf},
+  pages=9,
   year={2004}
 }
 @misc{website:hdmtypesystemwiki,
@@ -1197,10 +1197,16 @@ year = {2015},
 url = {https://wiki.haskell.org/Haskell_in_industry}
 }
 @inproceedings{meijer2004static,
-  title={Static typing where possible, dynamic typing when needed: The end of the cold war between programming languages},
-  author={Meijer, Erik and Drayton, Peter},
-  year={2004},
-  organization={Citeseer}
+    author = {Meijer, Erik and Drayton, Peter},
+    citeulike-article-id = {439123},
+    citeulike-linkout-0 = {http://research.microsoft.com/\~{}emeijer/Papers/RDL04Meijer.pdf},
+    journal = {Workshop on Revival of Dynamic Languages},
+    keywords = {dynamic-typing, hybrid-typing, javascript, type-dynamic},
+    posted-at = {2005-12-15 19:42:44},
+    priority = {2},
+    title = {{Static Typing Where Possible, Dynamic Typing When Needed}},
+    url = {http://research.microsoft.com/\~{}emeijer/Papers/RDL04Meijer.pdf},
+    year = {2005}
 }
 @article{sheard2004two,
   title={Two-level types and parameterized modules},
@@ -1487,10 +1493,12 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
  pages       = {119-123},
  chapter     = {6},
 }
-@article{machadomodel,
-  title={Model-Based Methodologies for Pervasive and Embedded Software},
-  author={Machado, Ricardo J and Maciel, Rita Suzana P and Rubin, Julia and Botterweck, Goetz},
-  publisher={Springer}
+@book{machadomodel,
+ author = {Machado, Ricardo J. and Maciel, Rita Suzana and Rubin, Julia and Botterweck, Goetz},
+ title = {Model-Based Methodologies for Pervasive and Embedded Software: 8th International Workshop, MOMPES 2012, Essen, Germany, September 4, 2012, Revised ... / Programming and Software Engineering)},
+ year = {2013},
+ isbn = {3642382088, 9783642382086},
+ publisher = {Springer Publishing Company, Incorporated},
 }
 @misc{website:stmonadwiki,
 title = {ST Monad},
@@ -1555,6 +1563,7 @@ url = {https://www.haskell.org/}
   title={Kernel Andorra Prolog and its computational model},
   author={Haridi, Seif and Janson, Sverker},
   journal={SICS Research Report},
+  pages=15,
   year={1990},
   publisher={Swedish Institute of Computer Science}
 }
