more biblio fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -60,12 +60,14 @@
 }
 @phdthesis{seres2001algebra,
   title={The algebra of logic programming},
+  school={Oxford University},
   author={Seres, Silvija},
 	year={2001}
 }
 @article{seres2000optimisation,
   title={Optimisation problems in logic programming: an algebraic approach},
   author={Seres, Silvija and Mu, Shin-Cheng},
+  journal={Logic Programming and Software Engineering},
   year={2000},
   publisher={Citeseer}
 }
@@ -290,7 +292,7 @@ url="http://hackage.haskell.org/package/hswip",
 note={\url{http://hackage.haskell.org/package/hswip}}
 }
 @misc{logict-lib,
-author="DanDoel",
+author="Dan Doel",
 title="The logict package",
 version="0.6.0.1",
 month="August",
@@ -299,7 +301,7 @@ url="http://hackage.haskell.org/package/logict",
 note={\url{http://hackage.haskell.org/package/logict}}
 }
 @misc{logict2-lib,
-author="DanDoel",
+author="Dan Doel",
 title="The logict package example",
 version="0.6.0.1",
 month="August",
