Solved Warning--missing booktitle in meijer2004static.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1208,6 +1208,7 @@ url = {https://wiki.haskell.org/Haskell_in_industry}
     priority = {2},
     title = {{Static Typing Where Possible, Dynamic Typing When Needed}},
     url = {http://research.microsoft.com/\~{}emeijer/Papers/RDL04Meijer.pdf},
+    booktitle={Workshop on Revival of Dynamic Languages},
     year = {2005}
 }
 @article{sheard2004two,
