final bib fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -68,8 +68,8 @@
   title={Optimisation problems in logic programming: an algebraic approach},
   author={Seres, Silvija and Mu, Shin-Cheng},
   journal={Logic Programming and Software Engineering},
-  year={2000},
-  publisher={Citeseer}
+  pages=19,
+  year={2000}
 }
 @incollection{seres2001higher,
   title={Higher-order transformation of logic programs},
@@ -79,13 +79,13 @@
   year={2001},
   publisher={Springer}
 }
-@article{spivey1999algebra,
-  title={The algebra of searching},
-  author={Spivey, JM and Seres, Silvija},
-  journal={Festschritf in hounour of CAR Hoare},
-  year={1999}
-}
-@book{hoare1998unifying,
+@INPROCEEDINGS{spivey1999algebra,
+    author = {Mike Spivey and Silvija Seres},
+    title = {The Algebra of Searching},
+    booktitle = {PROCEEDINGS OF A SYMPOSIUM IN CELEBRATION OF THE WORK OF},
+    year = {1999},
+    publisher = {MacMillan}
+}@book{hoare1998unifying,
   title={Unifying theories of programming},
   author={Hoare, Charles Anthony Richard and He, Jifeng},
   volume={14},
@@ -1142,10 +1142,10 @@ url = {http://en.wikipedia.org/wiki/Constraint_Handling_Rules}
 }
 @inproceedings{hanus1995curry,
   title={Curry: A truly functional logic language},
-  author={Hanus, Michael and Kuchen, Herbert and Moreno-Navarro, Juan Jose},
+  author={Hanus, Michael and Kuchen, Herbert and Moreno-Navarro, Juan Jos{\'e}},
   booktitle={Proc. ILPS},
-  volume={95},
-  number={5},
+  editor    = {Leon Sterling},
+  publisher = {{MIT} Press},
   pages={95--107},
   year={1995}
 }
