multi-paradigm always with hyphen.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -44,7 +44,7 @@ of code such as pure or impure.
 \item encapsulate impure code in a monad
 \end{enumerate}
 
-We gained some insights into multi paradigm languages:
+We gained some insights into multi-paradigm languages:
 \begin{itemize}
 	\item
 \end{itemize}
