--- a/embedding.tex
+++ b/embedding.tex
@@ -74,7 +74,7 @@ Being one of the very first attempts, the work is influenced by embeddings of \p
 like \progLang{Scheme} and \progLang{Lisp}.
 Although the host language \progLang{Haskell} has distinct characteristics such as lazy evaluation and a strong
 type system, the proposed scheme tends to be general as the aim here is to achieve a \progLang{Prolog}-like eDSL
-and not a multiparadigm declarative language.
+and not a multi-paradigm declarative language.
 \progLang{Prolog} \prologConstruct{predicates} are translated to \progLang{Haskell} functions which produce a
 stream of results lazily depicting depth first search with support for different strategies and practical operators
 such as \prologConstruct{cut} and \prologConstruct{fail} with higher order functions.
