--- a/introduction.tex
+++ b/introduction.tex
@@ -169,7 +169,7 @@ This can be achieved in two ways:
 
   This approach goes much deeper as it does not involve a direct translation.
   An attempt is made by taking a particular characteristic of a language and merging it with the characteristic of
-  the host language in order to eliminate conflicts resulting in a multiparadigm language.
+  the host language in order to eliminate conflicts resulting in a multi-paradigm language.
   It is more of weaving the two languages into one tight package with the best of both and maybe even the worst of
   both.
 \end{description}
@@ -198,7 +198,7 @@ improvements.
 Chapter~\ref{chap:accomplishedWork} provides details on the conceptual contributions of this thesis and the
 prototypes.
 Then we look at the question from different angles namely, Chapter~\ref{chap:embedding},  embedding a programming
-language into another programming language and  Chapter~\ref{chap:multiparadigm}, multi paradigm languages
+language into another programming language and  Chapter~\ref{chap:multiparadigm}, multi-paradigm languages
 (functional logic languages).
 Some of the indirectly related content resides in Chapter~\ref{chap:relatedWork}.
 Chapters \ref{chap:hwh} and \ref{chap:pwp} discuss the languages used in this thesis; \progLang{Haskell} and
