--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -18,7 +18,7 @@ Section~\ref{sec:prototypes} describes the minimalistic implementations for the 
 \section{Possible directions for \progLang{Prolog} in \progLang{Haskell}}\label{sec:work-in-points}
 
 This thesis provides a literature review on embedded eDSLs in Chapter~\ref{chap:embedding} and
-a survey on multi paradigm declarative languages in Chapter~\ref{chap:multiparadigm}.
+a survey on multi-paradigm declarative languages in Chapter~\ref{chap:multiparadigm}.
 The current chapter and Chapter~\ref{chap:proposedWork} evaluate and assess the current work for embedding
 \progLang{Prolog} in \progLang{Haskell}.
 
