--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -6,18 +6,18 @@
 \fi
 \begin{document}
 
-\chapter{Multi Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
+\chapter{Multi-Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
 
 
 This chapter describes the approach for integrating properties of multiple languages from different programming
 paradigms, especially, functional logic programming languages.
 
-\section{Multi paradigm languages}
+\section{Multi-paradigm languages}
 Over the years another approach has branched off from embedding languages, merging and integrating programming
 languages from different paradigms.
 Let us take the \progLang{Scala} programming language \cite{website:scala} as an exaxmple. It is a hybrid
 object-functional programming language which takes features from each of the two paradigms.
-This section looks at the literature on multi paradigm languages, mainly functional logic programming
+This section looks at the literature on multi-paradigm languages, mainly functional logic programming
 languages. This is of interest because in this thesis, the languages in question are \progLang{Haskell} 
 and \progLang{Prolog} which are of functional and logic programming paradigms respectively.
 
@@ -25,22 +25,22 @@ A peak into language classification reveals that it is not always a straight for
 according to their features and characteristics.
 It turns out that there are a number of notions which play a role in deciding where the language belongs.
 Often a language ends up being a part of almost all paradigms due to extensive libraries.
-Simply speaking, a multi paradigm programming language is a programming language that supports more than one
+Simply speaking, a multi-paradigm programming language is a programming language that supports more than one
 programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}. Moreover, as Timothy Budd puts it
-\cite{website:wikimultiparadigm} ``The idea of a multi paradigm language is to provide a framework in which
+\cite{website:wikimultiparadigm} ``The idea of a multi-paradigm language is to provide a framework in which
 programmers can work in a variety of styles, freely intermixing constructs from different paradigms.''
 
 
 \section{The informal content from blogs, articles and internet discussions}
 %\begin{description}
   
-\subsection{Multi paradigm languages}
+\subsection{Multi-paradigm languages}
 
 A lot has been worked upon before coming to clear grounds about the classification of programming languages.
 One approach is to consider that the scope of each language is pretty much infinite, as small extension modules
 that replicate different feature sets not naturally native to the language itself can be implemented on top of the
 base language.
-The descriptions of multi paradigm languages across the web
+The descriptions of multi-paradigm languages across the web
 \cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly of a framework providing tools to
 work with different styles of programming \cite{website:wikimpllist,website:dmoz}.
 Generally speaking, the above approach to language classification is not very popular in programming circles; one
@@ -48,7 +48,7 @@ reason is that this approach fails to identify the essence of a language.
 
 \subsection{Functional logic programming languages}
 
-Continuing from the previous section, we narrow down the scope by considering only multi paradigm declarative
+Continuing from the previous section, we narrow down the scope by considering only multi-paradigm declarative
 languages, i.e., functional logical programming languages.
 By doing so a large amount of information pops up, from articles that give brief descriptions
 \cite{website:wikiflpl, website:wikiflpllist} to articles that provide implementation techniques (for instance
@@ -74,7 +74,7 @@ Michael Hanus \cite{website:mhanus} and Sergio Antoy \cite{website:santoy}.
 
 \section{Literature}
 %\begin{description}
-\subsection{Multi paradigm languages}
+\subsection{Multi-paradigm languages}
 Possibly one of the most important works towards bringing programming styles together is the book
 \cite{hoare1998unifying} by C.A.R.
 Hoare which points out that among the large number of programming paradigms and theories, the unification theory
@@ -87,7 +87,7 @@ and unifying theories using monads.
 
 A recent survey \cite{hanus2007multi} throws light on this category of hybrid languages. 
 
-One of the most prominent multi paradigm languages in \progLang{Haskell} is \progLang{Curry}
+One of the most prominent multi-paradigm languages in \progLang{Haskell} is \progLang{Curry}
 \cite{antoy2010functional}.
 The syntax is borrowed from the parent language and so are a lot of the features.
 Recapitulating, a functional programming language works on the notion of mathematical functions while a logic
@@ -118,9 +118,9 @@ Although the language can do a lot; gaps do exist, such as the need to improve n
  
 %\end{description}
 
-\section{Some multi paradigm languages}
+\section{Some multi-paradigm languages}
 
-The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logic
+The list of multi-paradigm languages is huge, but in this thesis we will mostly stick to functional logic
 programming languages.
 Beginning with functional hybrids, a small project language called \progLang{Virgil}, \cite{website:virgil},
 combines objects to work with functions and procedures.
@@ -131,7 +131,7 @@ As object-oriented programming has been a dominant style of programming, even \p
 \progLang{O'Haskell} \cite{website:ohaskell}, though it last saw a release back in 2001.
 Another prominent language is \progLang{OCaml} \cite{website:ocamlwiki,website:ocamllang}, which adds
 object-oriented capabilities to a powerful type system and module support.
-Many of the multi paradigm languages were developed as a proof of concept and are replaced by new ones based on
+Many of the multi-paradigm languages were developed as a proof of concept and are replaced by new ones based on
 different approaches.
 As mentioned before, one of the most popular (see \cite{website:langpop}) and widely used both in academia and
 industry is the \progLang{Scala} \cite{website:scala} programming language.
@@ -177,7 +177,7 @@ functional language as described in the book \cite{friedman05reasoned} along wit
 \progLang{Haskell}.
 
 
-Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi paradigm languages
+Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi-paradigm languages
 with support for deterministic and non-deterministic computations. Contributing to the same there have been some
 predecessors \cite{website:alf,website:toy}.        
 
@@ -185,7 +185,7 @@ predecessors \cite{website:alf,website:toy}.
 \section{Summary}
 Recapitulating, this chapter surveys the approach to merging different programming paradigms to result in a hybrid
 programming language.
-Moreover, we talked about multi paradigm declarative languages along with \progLang{Prolog} and \progLang{Haskell}
+Moreover, we talked about multi-paradigm declarative languages along with \progLang{Prolog} and \progLang{Haskell}
 hybrids respectively.
 
 
