--- a/conclusion.tex
+++ b/conclusion.tex
@@ -25,6 +25,9 @@ have provided a methodology for replicating results achieved in this thesis.
 
 
 We gained some insights into merging declarative languages:
+
+\begin{comment}
+	We gained some insights into merging declarative languages:
 \begin{enumerate}
 \item using \progLang{Haskell}'s lazy nature to calculate results lazily (we get one result and then we hit `;' and then the next and so on).
 
@@ -45,6 +48,7 @@ We gained some insights into multi paradigm languages:
 \begin{itemize}
 	\item
 \end{itemize}
+\end{comment}
 
 \ifMain
 \begin{scope}
