--- a/embedding.tex
+++ b/embedding.tex
@@ -39,7 +39,7 @@ Moreover the discussion focuses on a lot of critical points that should be consi
 One of the implementations discussed redirects us to one of the earliest implementations of \progLang{Prolog} in
 \progLang{Haskell} for \haskellConstruct{Hugs 98}, called \haskellConstruct{Mini} \progLang{Prolog}
 \cite{website:mini-prolog-hugs98}.
-Although this implementation aims in the right direction, it is not supported by documentaion or literature.
+Although this implementation aims in the right direction, it is not supported by documentation or literature.
 It comes with three engines for query resolution, but still lacks practical \progLang{Prolog} features.
 This seems to be a common problem with the other implementations, \cite{website:takashi-workplace}.
 Other informal discussions of \progLang{Prolog} have already been mentioned in Chapter~\ref{chap:introduction}.
