--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -15,7 +15,7 @@ paradigms, especially, functional logic programming languages.
 \section{Multi-paradigm languages}
 Over the years another approach has branched off from embedding languages, merging and integrating programming
 languages from different paradigms.
-Let us take the \progLang{Scala} programming language \cite{website:scala} as an exaxmple. It is a hybrid
+Let us take the \progLang{Scala} programming language \cite{website:scala} as an example. It is a hybrid
 object-functional programming language which takes features from each of the two paradigms.
 This section looks at the literature on multi-paradigm languages, mainly functional logic programming
 languages. This is of interest because in this thesis, the languages in question are \progLang{Haskell} 
