--- a/background.tex
+++ b/background.tex
@@ -47,7 +47,7 @@ In untyped $\lambda$-calculi functions have no predetermined type, whereas typed
 on what sort (type) of data can a function work with.
 \progLang{Scheme} is based on the untyped variant, while \progLang{ML} and \progLang{Haskell} are based on typed
 $\lambda$-calculi.
-Most typed $\lambda$-calculi langauges are based on the Hindley-Milner (or Damas-Milner or Damas-Hindley-Milner,
+Most typed $\lambda$-calculi languages are based on the Hindley-Milner (or Damas-Milner or Damas-Hindley-Milner,
 \cite{hindley1969principal,milner1978theory,website:hdmtypesystemwiki}) type system.
 The Hindley-Milner-like type systems have the ability to give a most general type to a program
 without any annotations.
