listing height changes.

--- a/proto2.tex
+++ b/proto2.tex
@@ -180,7 +180,7 @@ Listing~\ref{tab:prlg0201monadicunificationconversion}.
 
 \begin{code-list}[H]
   \begin{singlespace}
-    \inputminted[linenos]{haskell}{haskell-proto2-monadic-unification-translation.hs}
+    \inputminted[linenos,fontsize=\footnotesize]{haskell}{haskell-proto2-monadic-unification-translation.hs}
   \end{singlespace}
 \caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Translation Functions}
 \label{tab:prlg0201monadicunificationtranslation}
@@ -216,7 +216,7 @@ Each language expression is matched based on its structure and returns a \haskel
 
 \begin{code-list}[H]
   \begin{singlespace}
-    \inputminted[linenos]{haskell}{haskell-proto2-unification-lion.hs}
+    \inputminted[linenos,fontsize=\small]{haskell}{haskell-proto2-unification-lion.hs}
   \end{singlespace}
 \caption{\protect{\codeLibrary{prolog-0.2.0.1}} Unification}
 \label{tab:prlg0201unification}
