font-size fix for listing.

--- a/proto3.tex
+++ b/proto3.tex
@@ -215,7 +215,7 @@ Listing~\ref{tab:miniprlgmonadicunif} shows the procedure for monadic unificatio
 in previous prototypes.
 \begin{code-list}[H]
 \begin{singlespace}
-  \inputminted[linenos, firstline=1, lastline=42]{haskell}{haskell-proto3-bevy-icebox.hs}
+  \inputminted[fontsize=\small,linenos, firstline=1, lastline=42]{haskell}{haskell-proto3-bevy-icebox.hs}
 \end{singlespace}
 \caption{Monadic unification}
 \label{tab:miniprlgmonadicunif}
